# photo-processing

./: .dockerignore  .env  Dockerfile  create_admin.py  pyproject.toml  requirements.txt  run_api.py  users.json
api/: auth.py  background_processor.py  dependencies.py  logging.py  main.py  task_manager.py
api/models/: auth_schemas.py  schemas.py
api/processors/: async_base.py  async_interior_processor.py  async_white_processor.py  base.py  interior_processor.py  white_processor.py
interior/: __init__.py  ai_client.py  async_ai_client.py  config.py  image_processor.py  main.py
white/: __init__.py  async_pixian_client.py  config.py  main.py  pixian_client.py
